--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 </div>
                     <div class="one-section-image-container">
             <img
-              src="./images/programming-background-collage411.png"
+              src="./images/3d-shapes-glowing-with-bright-ho411x734.jpg"
               alt="Amico Image"
               width="500"
               height="310"
