--- a/index.html
+++ b/index.html
@@ -301,47 +301,47 @@
 
      <section class="section-five" id="figma">
         <div class="container container-section-five">
-          <h2>Макети фігма</h2>
+          <h2 class="container-section-five-h2">Макети фігма</h2>
           <div class="container-section-five-ul-all">
-            <h3 class="project-list-h3">Назва макету 1</h3>
-            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <h3 class="container-section-five-h3">Назва макету 1</h3>
+            <p class="container-section-five-opis">Опис: макету з адаптивною версткою</p>
             <p>Технології:</p>
             <div>
-              <ul class="project-list-five">
-                <li class="project">HTML</li>
-                <li class="project">CSS</li>
-                <li class="project">JavaScript</li>
+              <ul class="container-section-five-ul">
+                <li class="container-section-five-li">HTML</li>
+                <li class="container-section-five-li">CSS</li>
+                <li class="container-section-five-li">JavaScript</li>
                   <a href="#">GitHub</a>
                   <a href="#">Live Demo</a>
               </ul>
             </div>
               
-            <h3 class="project-list-h3">Назва макету 2</h3>
-            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <h3 class="container-section-five-h3">Назва макету 2</h3>
+            <p class="container-section-five-opis">Опис: макету з адаптивною версткою</p>
             <p>Технології:</p>
                         <div>
-                          <ul class="project-list">
-                <li class="project">HTML</li>
-                <li class="project">CSS</li>
-                <li class="project">JavaScript</li>
+                          <ul class="container-section-five-ul">
+                <li class="container-section-five-li">HTML</li>
+                <li class="container-section-five-li">CSS</li>
+                <li class="container-section-five-li">JavaScript</li>
                   <a href="#">GitHub</a> <a href="#">Live Demo</a>
               </ul>
                         </div>
   
-            <h3 class="project-list-h3">Назва макету 3</h3>
-            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <h3 class="container-section-five-h3">Назва макету 3</h3>
+            <p class="container-section-five-p-opis">Опис: макету з адаптивною версткою</p>
             <p>Технології:</p>
                        <div>
-                          <ul class="project-list">
-                <li class="project">HTML</li>
-                <li class="project">CSS</li>
-                <li class="project">JavaScript</li>
+                          <ul class="container-section-five-ul">
+                <li class="container-section-five-li">HTML</li>
+                <li class="container-section-five-li">CSS</li>
+                <li class="container-section-five-li">JavaScript</li>
                   <a href="#">GitHub</a> <a href="#">Live Demo</a>
               </ul>
                        </div>
   
-            <h3 class="project-list-h3">Назва макету 4</h3>
-            <p class="project-list-p-opis">Опис: макету з адаптивною версткою</p>
+            <h3 class="container-section-five-h3">Назва макету 3</h3>
+            <p class="container-section-five-p-opis">Опис: макету з адаптивною версткою</p>
             <p>Технології:</p>
                        <div>
                           <ul class="project-list">
