--- a/index.html
+++ b/index.html
@@ -303,83 +303,144 @@
         <div class="container container-section-five">
           <h2 class="container-section-five-h2">Макети фігма</h2>
           <div class="container-section-five-ul-all">
-            <h3 class="container-section-five-h3">Назва макету 1</h3>
-            <p class="container-section-five-opis">Опис: макету з адаптивною версткою</p>
-            <p>Технології:</p>
             <div>
-              <ul class="container-section-five-ul">
-                <li class="container-section-five-li">HTML</li>
-                <li class="container-section-five-li">CSS</li>
-                <li class="container-section-five-li">JavaScript</li>
-                  <a href="#">GitHub</a>
-                  <a href="#">Live Demo</a>
-              </ul>
+              <h3 class="container-section-five-h3">IT технології</h3>
+              <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
+    та посиланням на сам макет: 
+    <a href="https://www.figma.com/design/J8U5uYNAbl5BaljcWKVDEM/Landing-page---%D0%9F%D0%9E?node-id=0-1&p=f&t=o2g1etiaRg0wLyfE-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
+  </p>
+  <div class="five-section-image-container">
+              <img
+                src="./images/IT-teh411x296.png"
+                alt="Amico Image"
+                width="500"
+                height="310"
+              />
+            </div>
+<div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">Формат сайта: Landing page</li>
+                  <li class="container-section-five-li">Ціна верстки: 250$</li>
+                  <li class="container-section-five-li">Дескоптна версія</li>
+                </ul>
+              </div>
+
+              <p class="container-section-five-teh">Технології:</p>
+              <div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">HTML</li>
+                  <li class="container-section-five-li">CSS</li>
+                  <li class="container-section-five-li">JavaScript</li>
+                  <li class="container-section-five-li">GitHub</li>
+                </ul>
+              </div>
             </div>
               
-            <h3 class="container-section-five-h3">Назва макету 2</h3>
-            <p class="container-section-five-opis">Опис: макету з адаптивною версткою</p>
-            <p>Технології:</p>
-                        <div>
-                          <ul class="container-section-five-ul">
-                <li class="container-section-five-li">HTML</li>
-                <li class="container-section-five-li">CSS</li>
-                <li class="container-section-five-li">JavaScript</li>
-                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
-              </ul>
-                        </div>
+          <div>
+              <h3 class="container-section-five-h3">Landing page</h3>
+              <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
+    та посиланням на сам макет: 
+    <a href="https://www.figma.com/design/Y8JxJsHmJXZFjHxf63VaPk/Landing-page---%D0%A1%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9?node-id=0-1&p=f&t=fC9FLR82agYKmPKx-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
+  </p>
+  <div class="five-section-image-container">
+              <img
+                src="./images/priklad2-411x410.png"
+                alt="Amico Image"
+                width="500"
+                height="310"
+              />
+            </div>
+<div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">Формат сайта: Landing page</li>
+                  <li class="container-section-five-li">Ціна верстки: 200$</li>
+                  <li class="container-section-five-li">Дескоптна версія</li>
+                </ul>
+              </div>
+
+              <p class="container-section-five-teh">Технології:</p>
+              <div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">HTML</li>
+                  <li class="container-section-five-li">CSS</li>
+                  <li class="container-section-five-li">JavaScript</li>
+                  <li class="container-section-five-li">GitHub</li>
+                </ul>
+              </div>
+            </div>
   
-            <h3 class="container-section-five-h3">Назва макету 3</h3>
-            <p class="container-section-five-p-opis">Опис: макету з адаптивною версткою</p>
-            <p>Технології:</p>
-                       <div>
-                          <ul class="container-section-five-ul">
-                <li class="container-section-five-li">HTML</li>
-                <li class="container-section-five-li">CSS</li>
-                <li class="container-section-five-li">JavaScript</li>
-                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
-              </ul>
-                       </div>
+           <div>
+              <h3 class="container-section-five-h3">Барбершоп</h3>
+              <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
+    та посиланням на сам макет: 
+    <a href="https://www.figma.com/design/9LWJHlYynZbRLEgurauIwY/Landing-page---%D0%91%D0%B0%D1%80%D0%B1%D0%B5%D1%80%D1%88%D0%BE%D0%BF?node-id=0-1&p=f&t=fYoeELnYXLnRwdsa-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
+  </p>
+  <div class="five-section-image-container">
+              <img
+                src="./images/priklad3-411x350.png"
+                alt="Amico Image"
+                width="500"
+                height="310"
+              />
+            </div>
+<div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">Формат сайта: Landing page</li>
+                  <li class="container-section-five-li">Ціна верстки: 250$</li>
+                  <li class="container-section-five-li">Дескоптна версія + планшет + мобільний</li>
+                </ul>
+              </div>
+
+              <p class="container-section-five-teh">Технології:</p>
+              <div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">HTML</li>
+                  <li class="container-section-five-li">CSS</li>
+                  <li class="container-section-five-li">JavaScript</li>
+                  <li class="container-section-five-li">GitHub</li>
+                </ul>
+              </div>
+            </div>
   
-            <h3 class="container-section-five-h3">Назва макету 3</h3>
-            <p class="container-section-five-p-opis">Опис: макету з адаптивною версткою</p>
-            <p>Технології:</p>
-                       <div>
-                          <ul class="project-list">
-                <li class="project">HTML</li>
-                <li class="project">CSS</li>
-                <li class="project">JavaScript</li>
-                  <a href="#">GitHub</a> <a href="#">Live Demo</a>
-              </ul>
-                       </div>
+            <div>
+              <h3 class="container-section-five-h3">IT технології</h3>
+              <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
+    та посиланням на сам макет: 
+    <a href="https://www.figma.com/design/8iy2KG1P1BHXO7UqibF4Ym/Landing-page---%D0%9C%D0%B0%D1%81%D0%BB%D0%BE?node-id=0-1&p=f&t=bDUpXLWXe3OfJQC1-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
+  </p>
+  <div class="five-section-image-container">
+              <img
+                src="./images/priklad4-411x600.png"
+                alt="Amico Image"
+                width="500"
+                height="310"
+              />
+            </div>
+<div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">Формат сайта: Landing page</li>
+                  <li class="container-section-five-li">Ціна верстки: 300$</li>
+                  <li class="container-section-five-li">Дескоптна версія</li>
+                </ul>
+              </div>
+
+              <p class="container-section-five-teh">Технології:</p>
+              <div class="five-section-ul">
+                <ul class="container-section-five-ul">
+                  <li class="container-section-five-li">HTML</li>
+                  <li class="container-section-five-li">CSS</li>
+                  <li class="container-section-five-li">JavaScript</li>
+                  <li class="container-section-five-li">GitHub</li>
+                </ul>
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
       <section class="section-designer" id="figma-desinge">
         <div class="container container-section-designer">
-          <h2>Макет сайту створив дизайнер</h2>
-          <div class="designer-content">
-            <!-- <img
-              src="./images/designer-avatar.jpg"
-              alt="Фото дизайнера"
-              class="designer-avatar"
-              width="150"
-              height="150"
-            /> -->
-            <div class="designer-info">
-              <p><strong>Ім’я:</strong> Дизайнер Дизайнер</p>
-              <p>
-                <strong>Профіль Figma:</strong>
-                <a href="https://www.figma.com/@designer" target="_blank"
-                  >figma.com/@designer</a
-                >
-              </p>
-              <p>
-                <strong>Про макет:</strong> Сучасний і мінімалістичний дизайн
-                для портфоліо розробника, адаптований під усі екрани.
-              </p>
-            </div>
-          </div>
+          <h2>Займаюсь професійним верстанням сайтів під ключ — адаптивно, швидко та якісно. Верстаю з макетів Figma, створюю зручні та сучасні інтерфейси. Якщо вам потрібен сайт, який виглядає ідеально на всіх пристроях і приносить результат — звертайтесь. Я допоможу втілити ваш дизайн у живий, працюючий сайт за справедливу оплату.</h2>
         </div>
       </section>
     </main>
