--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             </div>
               
           <div>
-              <h3 class="container-section-five-h3">Landing page</h3>
+              <h3 class="container-section-five-h3">Landing page: Apps</h3>
               <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
     та посиланням на сам макет: 
     <a href="https://www.figma.com/design/Y8JxJsHmJXZFjHxf63VaPk/Landing-page---%D0%A1%D0%BE%D0%B7%D0%B4%D0%B0%D0%BD%D0%B8%D0%B5-%D0%BF%D1%80%D0%B8%D0%BB%D0%BE%D0%B6%D0%B5%D0%BD%D0%B8%D0%B9?node-id=0-1&p=f&t=fC9FLR82agYKmPKx-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
@@ -403,7 +403,7 @@
             </div>
   
             <div>
-              <h3 class="container-section-five-h3">IT технології</h3>
+              <h3 class="container-section-five-h3">Масло</h3>
               <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
     та посиланням на сам макет: 
     <a href="https://www.figma.com/design/8iy2KG1P1BHXO7UqibF4Ym/Landing-page---%D0%9C%D0%B0%D1%81%D0%BB%D0%BE?node-id=0-1&p=f&t=bDUpXLWXe3OfJQC1-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
