--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
     
            </div>
            <div>
-              <h3 class="project-list-h3">Назва проекту - PRODUCT</h3>
+              <h3 class="project-list-h3">Назва проекту - yachtjet</h3>
              <p class="project-list-p-opis">
     Опис: 
     <a href="https://ljresetl.github.io/team-work-yachtjet/" target="_blank" class="container-section-four-figma"><span class="container-section-four-figma-www">сайт з адаптивною версткою</span></a> з макету Figma
