--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             id="buttonlogo"
             aria-label="buttonlogo"
           >
-            <svg class="svg-logo" width="40" height="36">
-              <use href="./images/icons.svg#icon-fullstack1"></use>
+            <svg class="svg-logo" alt="I.A.F"  width="40" height="40">
+              <use href="./images/icons.svg#icon-imf"></use>
             </svg>
           </button>
           <a href="./index.html" class="main-logo-text">Fullstack</a>
@@ -509,16 +509,9 @@
     </footer>
   </main>
    <div class="scroll-buttons">
-      <button type="button" class="scroll-btn up" aria-label="Scroll to top">
-        ↑
-      </button>
-      <button
-        type="button"
-        class="scroll-btn down"
-        aria-label="Scroll to bottom"
-      >
-        ↓
-      </button>
-    </div>
+  <button id="to-top" class="scroll-btn" aria-label="Scroll to top">
+    ↑
+  </button>
+</div>
   </body>
 </html>
