--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
               <h3 class="container-section-five-h3">Landing page: Крипто-гаманець</h3>
               <p class="container-section-five-opis">Опис: сайт з дескоптною версією з макету Figma
     та посиланням на сам макет: 
-    <a href="https://www.figma.com/design/RVgqmoyzHhDeDNgWj9931m/Landing-page---%D0%9A%D1%80%D0%B8%D0%BF%D1%82%D0%BE%D0%BA%D0%BE%D1%88%D0%B5%D0%BB%D0%B5%D0%BA--Copy-?node-id=0-1&p=f&t=820dcodxFlVpPPkX-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
+    <a href="https://www.figma.com/design/TRa5bdXdrVS6G69YHCSnWf/Landing-page---%D0%9A%D1%80%D0%B8%D0%BF%D1%82%D0%BE%D0%BA%D0%BE%D1%88%D0%B5%D0%BB%D0%B5%D0%BA--Copy-?node-id=0-1&p=f&t=l0tn9vtORK5BE3Zk-0" target="_blank" class="maket-figma"> <span class="container-section-four-figma-www">макет Figma</span></a>.
   </p>
   <div class="five-section-image-container">
               <img
