--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
         </div>
       </section>
 
-     <!-- <section class="section-five" id="figma">
+     <section class="section-five" id="figma">
         <div class="container container-section-five">
           <h2 class="container-section-five-h2">Макети фігма</h2>
           <div class="container-section-five-ul-all">
@@ -641,12 +641,10 @@
                 </ul>
               </div>
             </div>          
-<button type="button" id="load-more-btn">Показати ще</button>
-
-
           </div>
+          <button type="button" id="load-more-btn">Показати ще</button>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="section-designer" id="figma-desinge">
         <div class="container container-section-designer">
