--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                   <li class="container-section-four-li">HTML - Зроблено на високому рівні;</li>
                   <li class="container-section-four-li">CSS - Зроблено на високому рівні;</li>
                   <li class="container-section-four-li">JavaScript - Зроблено на високому рівні;</li>
-                    <a href="#">GitHub - Зроблено на високому рівні;</a>
+                    <a class="container-section-four-a" href="#">GitHub - Посилання на репозиторій</a>
                 </ul>
               </div> 
           
@@ -335,7 +335,7 @@
                   <li class="container-section-four-li">HTML - Зроблено на високому рівні;</li>
                   <li class="container-section-four-li">CSS - Зроблено на високому рівні;</li>
                   <li class="container-section-four-li">JavaScript - Зроблено на високому рівні;</li>
-                    <a href="#">GitHub - Зроблено на високому рівні;</a>
+                    <a class="container-section-four-a" href="#">GitHub - Посилання на репозиторій</a>
                 </ul>
               </div> 
     
@@ -363,7 +363,7 @@
                   <li class="container-section-four-li">HTML - Зроблено на високому рівні;</li>
                   <li class="container-section-four-li">CSS - Зроблено на високому рівні;</li>
                   <li class="container-section-four-li">JavaScript - Зроблено на високому рівні;</li>
-                    <a href="#">GitHub - Зроблено на високому рівні;</a>
+                    <a class="container-section-four-a" href="#">GitHub - Посилання на репозиторій</a>
                 </ul>
               </div> 
             </div>
@@ -662,12 +662,14 @@
 
     <footer class="section-fouter" id="telefon-mail">
       <div class="container container-section-fouter">
-        <h2>Контакти</h2>
-
-        <a href="mailto:ljresetl@gmail.com" target="_blank">ljresetl@gmail.com</a>
-        <a href="https://t.me/ljresetl" target="_blank">t.me/ljresetl</a>
-        <a href="https://github.com/ljresetl " target="_blank">github.com/ljresetl</a>
-
+        <div class="container-section-fouter-contact">
+          <h2 class="container-section-fouter-h">Контакти</h3>
+  
+          <a href="mailto:ljresetl@gmail.com" target="_blank" class="fouter-a">ljresetl@gmail.com</a>
+          <a href="https://t.me/ljresetl" target="_blank" class="fouter-a">t.me/ljresetl</a>
+          <a href="https://github.com/ljresetl " target="_blank" class="fouter-a">github.com/ljresetl</a>
+  
+        </div>
         <div class="social-media">
           <p class="social-title">Social media</p>
           <ul class="social-icons-two">
