--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
         <div class="container container-section-one">
           <div class="container-section-one-div-h">
             <h2 class="container-section-one-h">
-              Привіт! Я — починаючий Fullstack Developer, який захоплюється створенням сучасних, адаптивних та функціональних вебсайтів. Верстаю з макетів у Figma, дотримуюсь принципів mobile-first і піклуюся про чистий, семантичний HTML та структурований CSS-код. Постійно вдосконалюю свої знання JavaScript і вивчаю можливості сучасних фреймворків. Моя мета — створювати швидкі, зручні та візуально привабливі сайти, які приносять користь і задоволення користувачам. Я активно розвиваюся у сфері веб-розробки та готовий до нових викликів, реальних проєктів і співпраці.
-            </h2>
+              Привіт! Я — починаючий Fullstack Developer, що створює сучасні, адаптивні та функціональні вебсайти. Верстаю з макетів Figma, дотримуюсь принципів mobile-first, пишу чистий HTML та структурований CSS. Розвиваю навички JavaScript і вивчаю сучасні фреймворки. Моя мета — швидкі, зручні та привабливі сайти, що приносять користь. Активно розвиваюся й відкритий до нових проєктів та співпраці.</h2>
           </div>
           <div class="one-section-image-container">
 
@@ -175,8 +174,7 @@
           <div class="container-section-two-text">
             <h2 class="container-section-two-h">Про мене</h2>
             <p class="container-section-two-p">
-              Мене звати Віталій. Я проходжу курси Fullstack Developer і вже створюю адаптивні вебсайти, що чудово виглядають і працюють на всіх пристроях. У верстці використовую сучасний підхід — лише Flexbox та CSS Grid для розміщення елементів, мінімально вдаючись до margin і padding. Впевнено верстаю з макетів Figma з піксельною точністю, дотримуюсь принципів mobile-first, семантики та чистого коду. Добре володію HTML і CSS, активно вивчаю JavaScript і бекенд, щоб створювати повноцінні вебзастосунки. Моя мета — стати універсальним розробником, який розуміє фронтенд і бекенд та створює продукти, що одночасно привабливі, швидкі й зручні.
-</p>
+              Мене звати Віталій. Я проходжу курси Fullstack Developer і вже створюю адаптивні вебсайти, що чудово виглядають і працюють на всіх пристроях. У верстці використовую сучасний підхід — Flexbox та CSS Grid для розміщення елементів, мінімізуючи використання margin і padding. Впевнено верстаю з макетів Figma з піксельною точністю, дотримуюсь принципів mobile-first, семантики та чистого коду. Добре володію HTML і CSS, активно вивчаю JavaScript і бекенд, щоб створювати повноцінні вебзастосунки. Моя мета — стати універсальним розробником, який розуміє фронтенд і бекенд та створює швидкі, зручні й привабливі продукти.</p>
           </div>
         <div class="two-section-image-container">
 
