--- a/index.html
+++ b/index.html
@@ -174,7 +174,8 @@
           <div class="container-section-two-text">
             <h2 class="container-section-two-h">Про мене</h2>
             <p class="container-section-two-p">
-              Мене звати Віталій. Я проходжу курси Fullstack Developer і вже створюю адаптивні вебсайти, що чудово виглядають і працюють на всіх пристроях. У верстці використовую сучасний підхід — Flexbox та CSS Grid для розміщення елементів, мінімізуючи використання margin і padding. Впевнено верстаю з макетів Figma з піксельною точністю, дотримуюсь принципів mobile-first, семантики та чистого коду. Добре володію HTML і CSS, активно вивчаю JavaScript і бекенд, щоб створювати повноцінні вебзастосунки. Моя мета — стати універсальним розробником, який розуміє фронтенд і бекенд та створює швидкі, зручні й привабливі продукти.</p>
+              Мене звати Віталій. Я навчаюся на курсах Fullstack Developer і вже створюю адаптивні сайти, що чудово працюють на всіх пристроях. Використовую сучасний підхід — Flexbox і CSS Grid, мінімізуючи margin і padding. Впевнено верстаю з Figma з піксельною точністю, дотримуюсь mobile-first, семантики та чистого коду. Добре знаю HTML і CSS, активно вивчаю JavaScript і бекенд. Мета — стати універсальним розробником, який створює швидкі, зручні й привабливі продукти.
+            </p>
           </div>
         <div class="two-section-image-container">
 
