--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             aria-label="buttonlogo"
           >
             <svg class="svg-logo" alt="I.A.F"  width="40" height="40">
-              <use class="svg-logo-use" href="./images/icons.svg#icon-imf"></use>
+              <use class="svg-logo-use" href="./images/icons.svg#icon-log0-fullstack"></use>
             </svg>
             
           </button>
@@ -32,7 +32,7 @@
         <!-- Навігація -->
         <nav class="menu">
           <ul class="menu-list">
-            <li><a href="./index.html" class="menu-link">Fullstack</a></li>
+            <li><a href="./index.html" class="menu-link">Резюме</a></li>
             <li><a href="#skills" class="menu-link">Навички</a></li>
             <li><a href="#my-work" class="menu-link">Мої роботи</a></li>
             <li><a href="#figma" class="menu-link">Макети фігма</a></li>
