--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio Fullstack Developer</title>
     <link rel="stylesheet" href="./css/styles.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <meta name="description" content="Fullstack Developer створюю сучасні сайти, адаптовані під всі пристрої. Не використовую margin i padding, 
             тільки flex-box i grid.">
   </head>
@@ -139,9 +140,19 @@
         <div class="container container-section-one">
           <div class="container-section-one-div-h">
             <h2 class="container-section-one-h">
-              Привіт! Я — починаючий Fullstack Developer, що створює сучасні, адаптивні та функціональні вебсайти. Верстаю з макетів Figma, дотримуюсь принципів mobile-first, пишу чистий HTML та структурований CSS. Розвиваю навички JavaScript і вивчаю сучасні фреймворки. Моя мета — швидкі, зручні та привабливі сайти, що приносять користь. Активно розвиваюся й відкритий до нових проєктів та співпраці.</h2>
+              Привіт! Я — починаючий Fullstack Developer, що створює сучасні, адаптивні 
+              та функціональні вебсайти. Верстаю з макетів Figma, дотримуюсь принципів mobile-first
+               і прагну до найкращих практик у веброзробці. Пишу чистий, семантичний HTML та структурований,
+                кросбраузерний CSS, з особливою увагою до деталей та зручності користувача.
+
+              Активно розвиваю свої навички у JavaScript, вивчаю сучасні фреймворки та бібліотеки 
+              (зокрема React) для створення динамічних та інтерактивних інтерфейсів.
+              
+              Моя мета — створювати вебпродукти, які приносять реальну цінність бізнесу та користувачам.  
+              Шукаю можливості для реальних проєктів, співпраці або стажування, щоб поглибити практичні знання та 
+              долучитись до професійної спільноти розробників.</h2>
           </div>
-          <div class="one-section-image-container">
+<div class="one-section-image-container">
 
             <picture class="tablet-desktop-only">
               <!-- Десктопна версія -->
