--- a/index.html
+++ b/index.html
@@ -872,7 +872,10 @@
         <p class="modal-title">Залиш свої контакти і ми з вами обов'язково зв'яжемось</p>
 
 
-        <form class="modal-form">
+        
+
+        <form action="https://formspree.io/f/mzzggoog"
+        method="POST" class="modal-form">
 
             <div class="input-wrapper">
                 <label class="modal-label" for="user-name">Ім'я</label>
