up-forma-zviazku

--- a/index.html
+++ b/index.html
@@ -920,6 +920,8 @@
 
             </div>
             <div class="checkbox-wrapper">
+              <!-- <input type="checkbox" id="privacyPolicy" name="user-privacy" class="input-check visually-hidden" value="true"> -->
+
                 <input type="checkbox" id="user-privacy" name="user-privacy" class="input-check visually-hidden"
                     value="true">
                 <label class="modal-checkbox-label" for="user-privacy">
@@ -928,7 +930,7 @@
                             <use href="./images/icons.svg#icon-vector"></use>
                         </svg>
                     </span>I accept the terms and conditions of the
-                    <a href="#" class="privacy-policy">Privacy Policy</a>
+                    <a href="#"  class="privacy-policy">Privacy Policy</a>
                 </label>
             </div>
 
