сховав сабскрайб-футер

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
           </ul>
         </div>
 
-        <div class="footer-subscribe">
+        <!-- <div class="footer-subscribe">
           <p class="text-subscribe">Subscribe</p>
           <div>
             <form class="email-footer">
@@ -796,7 +796,7 @@
               </button>
             </div>
           
-        </div>
+        </div> -->
       </div>
     </footer>
   </main>
