up-resume-pro-mobile

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
     
               <ul class="mobile-menu-list">
                 <li><a href="index.html" class="mobile-menu-link">Fullstack</a></li>
+                <li><a href="#" class="menu-link mobile-menu-link-resume show-resume">Резюме</a></li>
                 <li><a href="#skills" class="mobile-menu-link">Навички</a></li>
                 <li><a href="#my-work" class="mobile-menu-link">Мої роботи</a></li>
                 <li><a href="#figma" class="mobile-menu-link">Макети фігма</a></li>
