--- a/index.html
+++ b/index.html
@@ -851,7 +851,7 @@
         <h3 class="resume-hhh">Минуле місце роботи</h3>
       <p class="resume-p">Досвід роботи
 Оператор виробництва → Працівник підготовки матеріалів
-Magna Seating s.r.o., Чехія
+Magna Bohemia s.r.o., Чехія
 2019 — дотепер
 
 Почав працювати оператором через агентство
