--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
       <div class="container container-section-fouter">
         <div class="container-section-fouter-contact">
           <h2 class="container-section-fouter-h">Контакти</h2>
-  
+  <a href="https://www.linkedin.com/in/vitalii-baranov-222439377/" target="_blank" class="fouter-a">linkedin</a>
           <a href="mailto:ljresetl@gmail.com" target="_blank" class="fouter-a">ljresetl@gmail.com</a>
           <a href="https://t.me/ljresetl" target="_blank" class="fouter-a">t.me/ljresetl</a>
           <a href="https://github.com/ljresetl " target="_blank" class="fouter-a">github.com/ljresetl</a>
